Bug 480506 - Resuming download after pause does not work
Summary: Resuming download after pause does not work
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.85
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords: qt6
: 486787 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-29 21:18 UTC by Nicolas Fella
Modified: 2024-05-20 18:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-01-29 21:18:22 UTC
STEPS TO REPRODUCE
1. Start a long download 
2. Press Pause
3. Press Start

OBSERVED RESULT
Downloads starts at 0%

EXPECTED RESULT
Download resumes at the % it was paused

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.7

ADDITIONAL INFORMATION
Resume handling in KIO HTTP is missing
Comment 1 Nicolas Fella 2024-05-19 22:48:46 UTC
*** Bug 486787 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2024-05-20 00:16:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1635
Comment 3 Nicolas Fella 2024-05-20 13:55:53 UTC
Git commit 25997944370d60f1a7c5fd42064f264540c7b2c0 by Nicolas Fella.
Committed on 20/05/2024 at 13:42.
Pushed by nicolasfella into branch 'master'.

[http] Implement resuming at offset again

M  +21   -1    src/kioworkers/http/http.cpp

https://invent.kde.org/frameworks/kio/-/commit/25997944370d60f1a7c5fd42064f264540c7b2c0