[http] Implement resuming at offset again

BUG: 480506